# tstlan-web

./: .gitignore  Makefile  README.md  config.dev.toml  docker-compose.test.yml  pyproject.toml  tstlan.py
.github/workflows/: ci.yml
dev/: multimeter.yaml  thermostat.yaml
devsim/: __main__.py  protocol.py  server.py  signals.py
docs/: api.rst  architecture.rst  conf.py  data-model.rst  index.rst  modules.rst  operations.rst
migrations/: env.py
migrations/versions/: 5e1414fa1ab4_csrf_token_on_sessions.py  77827210b345_initial_schema.py  a1b2c3d4e5f6_device_configs.py  c1d2e3f4a5b6_normalize_modbus_transport.py  d2e3f4a5b6c7_drop_variable_index.py  e3f4a5b6c7d8_add_config_sync_id.py
tests/: conftest.py  test_api.py  test_auth_models.py  test_auth_routes.py  test_auth_service.py  test_config_device.py  test_configs_routes.py  test_configs_service.py  test_create_admin.py  test_db.py  test_device_profile.py  test_devices_api.py  test_devices_history.py  test_devices_service.py  test_devices_stream.py  test_devices_values.py  test_devsim_signals.py  test_ini2yaml.py  test_integration_net.py  test_logging.py  test_middleware.py  test_migrations.py  test_passwords.py  test_scenario.py  test_simulation_catalog.py  test_simulation_engine.py  test_trip.py  test_trip_cli.py  test_unidriver_io.py  test_unidriver_netvar.py  test_var_layout.py
tests/api/: test_app.py  test_logging.py
tests/auth/: test_async_routes.py  test_models.py  test_routes.py
tests/configs/: test_routes.py
tests/db/: test_migrations.py  test_postgres_migrations.py
tests/devices/: test_api.py  test_history.py  test_service.py  test_stream.py  test_values.py
tests/devices/simulation/: test_builder.py  test_signals.py
tests/devices/unidriver/: test_native.py  (+1 more)
tests/fixtures/: device.yaml  native_unidriver.c  scenario.yaml
tests/integration/: test_docker_unidriver.py  test_net.py
tests/tools/: test_ini2yaml.py  test_seed.py
tstlan/: __main__.py  app.py  config.py  db.py  logging_setup.py  models.py  trip.py
tstlan/auth/: __init__.py  middleware.py  models.py  passwords.py  routes.py  service.py
tstlan/configs/: models.py  routes.py  schemas.py  service.py
tstlan/devices/: config_device.py  device_profile.py  history.py  models.py  routes.py  runtime.py  scenario.py  schemas.py  service.py
tstlan/tools/: create_admin.py  ini2yaml.py  seed.py  seed_data.py
web/tstlan-web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
(+45 files in other folders)
