[project]
name = "tstlan"
version = "0.1.0"
description = "TSTLAN web platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "httpx>=0.28",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
