[project]
name = "tstlan"
version = "0.1.0"
description = "TSTLAN web platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20",
    "argon2-cffi>=23",
    "fastapi[standard]>=0.136",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
]

[project.scripts]
tstlan = "tstlan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9",
    "httpx>=0.28",
    "ruff>=0.8",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
