[project]
name = "tstlan"
version = "0.1.0"
description = "TSTLAN web platform"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.18.4",
    "argon2-cffi>=23",
    "fastapi[standard]>=0.136",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0",
]

[project.scripts]
tstlan = "tstlan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9",
    "httpx>=0.28",
    "ruff>=0.8",
    "ty>=0.0.1",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Интеграция гоняется только локально (`make test-integration`); дефолтный
# прогон и CI берут лишь юнит-тесты.
addopts = "-m 'not integration and not postgres and not docker_integration'"
markers = [
    "integration: обмен с процессом-прибором devsim по реальному TCP-сокету (локально, не в CI)",
    "postgres: PostgreSQL-backed tests that require TEST_POSTGRES_DATABASE_URL",
    "docker_integration: Docker-backed native unidriver integration tests",
]

[tool.coverage.run]
branch = true
source = ["tstlan"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
extend-exclude = ["migrations"]
